# ocr_server

./: .gitignore  CMakeLists.txt  Makefile  configure.sh  http_server  main.cpp  main_old.cpp
include/: datastore.hpp  http_server.h  http_server.hpp  logger.hpp  ocrService.hpp  setWorkDir.hpp
src/: datastore.cpp  http_server.cpp  logger.cpp  main.cpp  ocrService.cpp  setWorkDir.cpp
tests/: test_datastore.cpp  test_logger.cpp  test_workdir.cpp
